<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main_menu"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/home"
        android:title="@string/navigation_home"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/my_profileBand"
        android:title="@string/my_bands"
        app:showAsAction="never"/>

    <item
        android:id="@+id/create_event"
        android:title="@string/create_an_event"
        app:showAsAction="never"/>

    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="never"/>

    <item
        android:id="@+id/signout"
        android:title="@string/signout"
        app:showAsAction="never"/>

</menu>
