<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_navigation_home"
        android:title="@string/navigation_home"/>

    <item
        android:id="@+id/my_profile"
        android:icon="@drawable/ic_navigation_profile"
        android:title="@string/navigation_profile"/>

    <item
        android:id="@+id/my_events"
        android:icon="@drawable/ic_navigation_event"
        android:title="@string/navigation_events"/>

    <item
        android:id="@+id/map"
        android:icon="@drawable/ic_navigation_map"
        android:title="@string/navigation_map"/>

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_navigation_search"
        android:title="@string/navigation_finder"/>

</menu>
