<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".musiconnect.ProfileModification">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editMyProfileTitle"
            android:layout_width="wrap_content"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:text="@string/editmyprofile"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:layout_marginStart="10dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/myProfileFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/first_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newFirstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/new_first_name"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/myProfileLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_weight="1"
                android:text="@string/last_name"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newLastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_weight="1"
                android:hint="@string/new_last_name"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/myProfileUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_weight="1"
                android:text="@string/username_field"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_weight="1"
                android:hint="@string/new_username"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/myProfileEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_weight="1"
                android:text="@string/email_address"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_weight="1"
                android:hint="@string/new_email_address"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2">

            <TextView
                android:id="@+id/myProfileBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_weight="1"
                android:text="@string/date_of_birth"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/newBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="19dp"
                android:layout_weight="1"
                android:hint="@string/new_birthday"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="400dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDoNotSaveProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_not_save_profile" />

        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_profile" />
    </LinearLayout>
</RelativeLayout>